src/parse/parsetiger.output
Terminals unused in grammar

    "class"
    "extends"
    "method"
    "new"


State 2 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: exp
    2        | chunks

    3 exp: "integer"
    4    | "string"
    5    | "nil"
    6    | "break"
    7    | "if" exp "then" exp "else" exp
    8    | "if" exp "then" exp
    9    | "while" exp "do" exp
   10    | exp "&" exp
   11    | exp "|" exp
   12    | exp "+" exp
   13    | exp "-" exp
   14    | "-" exp
   15    | exp "*" exp
   16    | exp "/" exp
   17    | exp "=" exp
   18    | exp "<>" exp
   19    | exp ">" exp
   20    | exp ">=" exp
   21    | exp "<" exp
   22    | exp "<=" exp

   23 chunks: ε
   24       | tychunk chunks
   25       | funchunk chunks
   26       | varchunk chunks
   27       | "import" "string" chunks
   28       | "_chunks" "(" "integer" ")" chunks

   29 typeid: "identifier"
   30       | "_namety" "(" "integer" ")"

   31 callexp: "identifier" "(" exps ")"
   32        | "identifier" "()"

   33 exps: ε
   34     | ss_exps

   35 ss_exps: exp
   36        | ss_exps ";" exp

   37 ss_fields: "{" fields "}"

   38 fields: fields "," field
   39       | field

   40 field: "identifier" "=" exp

   41 exp: lvalue
   42    | "(" exps ")"
   43    | lvalue ":=" exp
   44    | "let" chunks "in" exps "end"
   45    | "_cast" "(" exp "," ty ")"
   46    | callexp
   47    | "_exp" "(" "integer" ")"
   48    | "identifier" "[" exp "]" "of" exp
   49    | "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   50    | typeid "{" "}"
   51    | typeid ss_fields
   52    | "for" "identifier" ":=" exp "to" exp "do" exp

   53 lvalue: "identifier"
   54       | lvalue "." "identifier"
   55       | lvalue "[" exp "]"
   56       | "_lvalue" "(" "integer" ")"

   57 funchunk: fundec
   58         | fundec funchunk

   59 fundec: "function" "identifier" "(" varfields ")" "=" exp
   60       | "function" "identifier" "(" varfields ")" ":" typeid "=" exp
   61       | "primitive" "identifier" "(" varfields ")" ":" typeid
   62       | "primitive" "identifier" "(" varfields ")"

   63 vardec: "var" "identifier" ":" typeid ":=" exp
   64       | "var" "identifier" ":=" exp

   65 varchunk: vardec

   66 tychunk: tydec
   67        | tydec tychunk

   68 tydec: "type" "identifier" "=" ty

   69 ty: typeid
   70   | "{" tyfields "}"
   71   | "array" "of" typeid

   72 tyfields: ε
   73         | tyfields.1

   74 tyfields.1: tyfields.1 "," tyfield
   75           | tyfield

   76 tyfield: "identifier" ":" typeid

   77 varfields: ε
   78          | varfields.1

   79 varfields.1: varfields.1 "," varfield
   80            | varfield

   81 varfield: "identifier" ":" typeid


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "string" <std::string> (258) 4 27
    "identifier" <misc::symbol> (259) 29 31 32 40 48 52 53 54 59 60 61 62 63 64 68 76 81
    "integer" <int> (260) 3 28 30 47 49 56
    "&" (261) 10
    "array" (262) 71
    ":=" (263) 43 52 63 64
    "break" (264) 6
    "_cast" (265) 45
    "class" (266)
    ":" (267) 60 61 63 76 81
    "," (268) 38 45 74 79
    "/" (269) 16
    "do" (270) 9 52
    "." (271) 54
    "else" (272) 7
    "end" (273) 44
    "=" (274) 17 40 59 60 68
    "extends" (275)
    "for" (276) 52
    "function" (277) 59 60
    ">=" (278) 20
    ">" (279) 19
    "if" (280) 7 8
    "import" (281) 27
    "in" (282) 44
    "{" (283) 37 50 70
    "[" (284) 48 49 55
    "<=" (285) 22
    "let" (286) 44
    "(" (287) 28 30 31 42 45 47 49 56 59 60 61 62
    "<" (288) 21
    "-" (289) 13 14
    "method" (290)
    "<>" (291) 18
    "new" (292)
    "nil" (293) 5
    "of" (294) 48 49 71
    "|" (295) 11
    "+" (296) 12
    "primitive" (297) 61 62
    "}" (298) 37 50 70
    "]" (299) 48 49 55
    ")" (300) 28 30 31 42 45 47 49 56 59 60 61 62
    ";" (301) 36
    "then" (302) 7 8
    "*" (303) 15
    "to" (304) 52
    "type" (305) 68
    "var" (306) 63 64
    "while" (307) 9
    "_chunks" (308) 28
    "_namety" (309) 30 49
    "()" (310) 32
    "_exp" (311) 47
    "_lvalue" (312) 56


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    program (59)
        on left: 1 2
        on right: 0
    exp <ast::Exp*> (60)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 1 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 35 36 40 43 45 48 49 52 55 59 60 63 64
    chunks <ast::ChunkList*> (61)
        on left: 23 24 25 26 27 28
        on right: 2 24 25 26 27 28 44
    typeid <ast::NameTy*> (62)
        on left: 29 30
        on right: 50 51 60 61 63 69 71 76 81
    callexp <ast::CallExp*> (63)
        on left: 31 32
        on right: 46
    exps <ast::exps_type*> (64)
        on left: 33 34
        on right: 31 42 44
    ss_exps <ast::exps_type*> (65)
        on left: 35 36
        on right: 34 36
    ss_fields <ast::fieldinits_type*> (66)
        on left: 37
        on right: 51
    fields <ast::fieldinits_type*> (67)
        on left: 38 39
        on right: 37 38
    field <ast::FieldInit*> (68)
        on left: 40
        on right: 38 39
    lvalue <ast::Var*> (69)
        on left: 53 54 55 56
        on right: 41 43 54 55
    funchunk <ast::FunctionChunk*> (70)
        on left: 57 58
        on right: 25 58
    fundec <ast::FunctionDec*> (71)
        on left: 59 60 61 62
        on right: 57 58
    vardec <ast::VarDec*> (72)
        on left: 63 64
        on right: 65
    varchunk <ast::VarChunk*> (73)
        on left: 65
        on right: 26
    tychunk <ast::TypeChunk*> (74)
        on left: 66 67
        on right: 24 67
    tydec <ast::TypeDec*> (75)
        on left: 68
        on right: 66 67
    ty <ast::Ty*> (76)
        on left: 69 70 71
        on right: 45 68
    tyfields <ast::fields_type*> (77)
        on left: 72 73
        on right: 70
    tyfields.1 <ast::fields_type*> (78)
        on left: 74 75
        on right: 73 74
    tyfield <ast::Field*> (79)
        on left: 76
        on right: 74 75
    varfields <ast::VarChunk*> (80)
        on left: 77 78
        on right: 59 60 61 62
    varfields.1 <ast::VarChunk*> (81)
        on left: 79 80
        on right: 78 79
    varfield <ast::VarDec*> (82)
        on left: 81
        on right: 79 80


State 0

    0 $accept: • program "end of file"
    1 program: • exp
    2        | • chunks
    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • "break"
    7    | • "if" exp "then" exp "else" exp
    8    | • "if" exp "then" exp
    9    | • "while" exp "do" exp
   10    | • exp "&" exp
   11    | • exp "|" exp
   12    | • exp "+" exp
   13    | • exp "-" exp
   14    | • "-" exp
   15    | • exp "*" exp
   16    | • exp "/" exp
   17    | • exp "=" exp
   18    | • exp "<>" exp
   19    | • exp ">" exp
   20    | • exp ">=" exp
   21    | • exp "<" exp
   22    | • exp "<=" exp
   23 chunks: ε •  ["end of file"]
   24       | • tychunk chunks
   25       | • funchunk chunks
   26       | • varchunk chunks
   27       | • "import" "string" chunks
   28       | • "_chunks" "(" "integer" ")" chunks
   29 typeid: • "identifier"
   30       | • "_namety" "(" "integer" ")"
   31 callexp: • "identifier" "(" exps ")"
   32        | • "identifier" "()"
   41 exp: • lvalue
   42    | • "(" exps ")"
   43    | • lvalue ":=" exp
   44    | • "let" chunks "in" exps "end"
   45    | • "_cast" "(" exp "," ty ")"
   46    | • callexp
   47    | • "_exp" "(" "integer" ")"
   48    | • "identifier" "[" exp "]" "of" exp
   49    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   50    | • typeid "{" "}"
   51    | • typeid ss_fields
   52    | • "for" "identifier" ":=" exp "to" exp "do" exp
   53 lvalue: • "identifier"
   54       | • lvalue "." "identifier"
   55       | • lvalue "[" exp "]"
   56       | • "_lvalue" "(" "integer" ")"
   57 funchunk: • fundec
   58         | • fundec funchunk
   59 fundec: • "function" "identifier" "(" varfields ")" "=" exp
   60       | • "function" "identifier" "(" varfields ")" ":" typeid "=" exp
   61       | • "primitive" "identifier" "(" varfields ")" ":" typeid
   62       | • "primitive" "identifier" "(" varfields ")"
   63 vardec: • "var" "identifier" ":" typeid ":=" exp
   64       | • "var" "identifier" ":=" exp
   65 varchunk: • vardec
   66 tychunk: • tydec
   67        | • tydec tychunk
   68 tydec: • "type" "identifier" "=" ty

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "function"    shift, and go to state 7
    "if"          shift, and go to state 8
    "import"      shift, and go to state 9
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "primitive"   shift, and go to state 14
    "type"        shift, and go to state 15
    "var"         shift, and go to state 16
    "while"       shift, and go to state 17
    "_chunks"     shift, and go to state 18
    "_namety"     shift, and go to state 19
    "_exp"        shift, and go to state 20
    "_lvalue"     shift, and go to state 21

    $default  reduce using rule 23 (chunks)

    program   go to state 22
    exp       go to state 23
    chunks    go to state 24
    typeid    go to state 25
    callexp   go to state 26
    lvalue    go to state 27
    funchunk  go to state 28
    fundec    go to state 29
    vardec    go to state 30
    varchunk  go to state 31
    tychunk   go to state 32
    tydec     go to state 33


State 1

    4 exp: "string" •

    $default  reduce using rule 4 (exp)


State 2

   29 typeid: "identifier" •  ["{"]
   31 callexp: "identifier" • "(" exps ")"
   32        | "identifier" • "()"
   48 exp: "identifier" • "[" exp "]" "of" exp
   53 lvalue: "identifier" •  ["end of file", "&", ":=", ",", "/", "do", ".", "else", "end", "=", "function", ">=", ">", "import", "in", "[", "<=", "<", "-", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var", "_chunks"]

    "["   shift, and go to state 34
    "("   shift, and go to state 35
    "()"  shift, and go to state 36

    "{"       reduce using rule 29 (typeid)
    "["       [reduce using rule 53 (lvalue)]
    $default  reduce using rule 53 (lvalue)

    shift/reduce conflict on token "[":
       53 lvalue: "identifier" •
       48 exp: "identifier" • "[" exp "]" "of" exp
      First example: "identifier" • "[" exp "]" "of" exp "end of file"
      Shift derivation
        $accept
        ↳ 0: program                                        "end of file"
             ↳ 1: exp
                  ↳ 48: "identifier" • "[" exp "]" "of" exp
      Second example: "identifier" • "[" exp "]" "end of file"
      Reduce derivation
        $accept
        ↳ 0: program                                           "end of file"
             ↳ 1: exp
                  ↳ 41: lvalue
                        ↳ 55: lvalue               "[" exp "]"
                              ↳ 53: "identifier" •



State 3

    3 exp: "integer" •

    $default  reduce using rule 3 (exp)


State 4

    6 exp: "break" •

    $default  reduce using rule 6 (exp)


State 5

   45 exp: "_cast" • "(" exp "," ty ")"

    "("  shift, and go to state 37


State 6

   52 exp: "for" • "identifier" ":=" exp "to" exp "do" exp

    "identifier"  shift, and go to state 38


State 7

   59 fundec: "function" • "identifier" "(" varfields ")" "=" exp
   60       | "function" • "identifier" "(" varfields ")" ":" typeid "=" exp

    "identifier"  shift, and go to state 39


State 8

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • "break"
    7    | • "if" exp "then" exp "else" exp
    7    | "if" • exp "then" exp "else" exp
    8    | • "if" exp "then" exp
    8    | "if" • exp "then" exp
    9    | • "while" exp "do" exp
   10    | • exp "&" exp
   11    | • exp "|" exp
   12    | • exp "+" exp
   13    | • exp "-" exp
   14    | • "-" exp
   15    | • exp "*" exp
   16    | • exp "/" exp
   17    | • exp "=" exp
   18    | • exp "<>" exp
   19    | • exp ">" exp
   20    | • exp ">=" exp
   21    | • exp "<" exp
   22    | • exp "<=" exp
   29 typeid: • "identifier"
   30       | • "_namety" "(" "integer" ")"
   31 callexp: • "identifier" "(" exps ")"
   32        | • "identifier" "()"
   41 exp: • lvalue
   42    | • "(" exps ")"
   43    | • lvalue ":=" exp
   44    | • "let" chunks "in" exps "end"
   45    | • "_cast" "(" exp "," ty ")"
   46    | • callexp
   47    | • "_exp" "(" "integer" ")"
   48    | • "identifier" "[" exp "]" "of" exp
   49    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   50    | • typeid "{" "}"
   51    | • typeid ss_fields
   52    | • "for" "identifier" ":=" exp "to" exp "do" exp
   53 lvalue: • "identifier"
   54       | • lvalue "." "identifier"
   55       | • lvalue "[" exp "]"
   56       | • "_lvalue" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "while"       shift, and go to state 17
    "_namety"     shift, and go to state 19
    "_exp"        shift, and go to state 20
    "_lvalue"     shift, and go to state 21

    exp      go to state 40
    typeid   go to state 25
    callexp  go to state 26
    lvalue   go to state 27


State 9

   27 chunks: "import" • "string" chunks

    "string"  shift, and go to state 41


State 10

   23 chunks: ε •  ["in"]
   24       | • tychunk chunks
   25       | • funchunk chunks
   26       | • varchunk chunks
   27       | • "import" "string" chunks
   28       | • "_chunks" "(" "integer" ")" chunks
   44 exp: "let" • chunks "in" exps "end"
   57 funchunk: • fundec
   58         | • fundec funchunk
   59 fundec: • "function" "identifier" "(" varfields ")" "=" exp
   60       | • "function" "identifier" "(" varfields ")" ":" typeid "=" exp
   61       | • "primitive" "identifier" "(" varfields ")" ":" typeid
   62       | • "primitive" "identifier" "(" varfields ")"
   63 vardec: • "var" "identifier" ":" typeid ":=" exp
   64       | • "var" "identifier" ":=" exp
   65 varchunk: • vardec
   66 tychunk: • tydec
   67        | • tydec tychunk
   68 tydec: • "type" "identifier" "=" ty

    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 14
    "type"       shift, and go to state 15
    "var"        shift, and go to state 16
    "_chunks"    shift, and go to state 18

    $default  reduce using rule 23 (chunks)

    chunks    go to state 42
    funchunk  go to state 28
    fundec    go to state 29
    vardec    go to state 30
    varchunk  go to state 31
    tychunk   go to state 32
    tydec     go to state 33


State 11

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • "break"
    7    | • "if" exp "then" exp "else" exp
    8    | • "if" exp "then" exp
    9    | • "while" exp "do" exp
   10    | • exp "&" exp
   11    | • exp "|" exp
   12    | • exp "+" exp
   13    | • exp "-" exp
   14    | • "-" exp
   15    | • exp "*" exp
   16    | • exp "/" exp
   17    | • exp "=" exp
   18    | • exp "<>" exp
   19    | • exp ">" exp
   20    | • exp ">=" exp
   21    | • exp "<" exp
   22    | • exp "<=" exp
   29 typeid: • "identifier"
   30       | • "_namety" "(" "integer" ")"
   31 callexp: • "identifier" "(" exps ")"
   32        | • "identifier" "()"
   33 exps: ε •  [")"]
   34     | • ss_exps
   35 ss_exps: • exp
   36        | • ss_exps ";" exp
   41 exp: • lvalue
   42    | • "(" exps ")"
   42    | "(" • exps ")"
   43    | • lvalue ":=" exp
   44    | • "let" chunks "in" exps "end"
   45    | • "_cast" "(" exp "," ty ")"
   46    | • callexp
   47    | • "_exp" "(" "integer" ")"
   48    | • "identifier" "[" exp "]" "of" exp
   49    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   50    | • typeid "{" "}"
   51    | • typeid ss_fields
   52    | • "for" "identifier" ":=" exp "to" exp "do" exp
   53 lvalue: • "identifier"
   54       | • lvalue "." "identifier"
   55       | • lvalue "[" exp "]"
   56       | • "_lvalue" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "while"       shift, and go to state 17
    "_namety"     shift, and go to state 19
    "_exp"        shift, and go to state 20
    "_lvalue"     shift, and go to state 21

    $default  reduce using rule 33 (exps)

    exp      go to state 43
    typeid   go to state 25
    callexp  go to state 26
    exps     go to state 44
    ss_exps  go to state 45
    lvalue   go to state 27


State 12
